# ukgeo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/: settings.json
.github/.workflows/: ci.yml
config/: domain_road_safety.yaml
data/: stats19_diagnosis.txt
data/kaggle/: dataset-metadata.json
docs/: STATUS.md  alternative.md  gaps_and_ecosystem.md  os_names_api_findings.md
notebooks/: os_names_api_comparison.ipynb  ukgeo_kaggle_example.ipynb  ukgeo_kaggle_intro.ipynb
scripts/: build_eval_dataset.py  build_infrastructure_aliases.py  build_kaggle_dataset.py  build_stats19_eval.py  calibrate.py  download_os_open_names.py  download_os_open_roads.py  download_osm_named_junctions.py  download_osm_roads.py
tests/: test_pipeline.py
ukgeo/: __init__.py  cli.py  level1_regex.py  level2_ner.py  level3_os_names.py  lookup.py  maps.py  models.py  pipeline.py  uk_admin.py  utils.py
ukgeo/data/: infrastructure_aliases.csv
