[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ukgeo"
version = "0.3.0"
description = "Tiered UK location free-text to lat/lon geocoder"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "polars>=0.20",
    "httpx>=0.27",       # download script
    "requests>=2.31",    # postcodes.io (level 1)
    "pyyaml>=6.0",       # weights config
    "pyproj>=3.6",       # BNG→WGS84 (optional but recommended)
    "python-dotenv>=1.0",
]

[project.scripts]
ukgeo = "ukgeo.cli:main"

[project.optional-dependencies]
maps = [
    "folium>=0.15",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "folium>=0.15",
]
ollama = [
    "ollama>=0.2",       # level 4 LLM (optional)
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
