[project]
name = "ukgeo"
version = "0.4.0"
description = "UK location free-text geocoder — resolves road references, place names, junctions, and infrastructure to lat/lon"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["geocoding", "uk", "ordnance-survey", "road-safety", "geospatial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "polars>=0.20",
    "httpx>=0.27",
    "requests>=2.31",
    "pyyaml>=6.0",
    "pyproj>=3.6",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
maps = ["folium>=0.15"]
dev = ["pytest>=8.0", "ruff>=0.4", "folium>=0.15"]
ollama = ["ollama>=0.2"]

[project.scripts]
ukgeo = "ukgeo.cli:main"

[project.urls]
Homepage = "https://github.com/ThomasHSimm/ukgeo"
Repository = "https://github.com/ThomasHSimm/ukgeo"
"Bug Tracker" = "https://github.com/ThomasHSimm/ukgeo/issues"
Kaggle = "https://www.kaggle.com/datasets/thomassimm/ukgeo-combined-dataset"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ukgeo"]
include = [
    "ukgeo/**/*.py",
    "ukgeo/data/infrastructure_aliases.csv",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
